--- a/pom.xml
+++ b/pom.xml
@@ -4,27 +4,17 @@
     <modelVersion>4.0.0</modelVersion>
     <packaging>pom</packaging>
     <modules>
-        <module>archives</module>
-        <module>jdk-features</module>
+        <module>tracing</module>
+        <module>openjdk9</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.12</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <version>3.0.0</version>
     </parent>
     <groupId>com.glmapper.bridge.boot</groupId>
     <artifactId>java-guides</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>java-guides</name>
     <description>Demo project for Spring Boot</description>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
